fixed overflow

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,5 +1,6 @@
 .content{
   padding: 0 !important;
+  overflow: hidden;
 }
 .sub-page{
   height: 100%;
@@ -23,5 +24,5 @@ li.tab.col.s4 > a{
   padding: 0 !important;
 }
 .submit{
-  padding-top: 15px; 
+  padding-top: 15px;
 }
